--- a/Before you start.ipynb
+++ b/Before you start.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "You can use any true text editor and many different integrated development environments for C++ coding. If you don’t already have a favorite, I’d suggest trying Visual Studio Code (https://code.visualstudio.com/).\n",
     "\n",
-    "Create a user account on CSES (https://cses.fi/), and make sure you add your UH student number to your profile on CSES so the submissions can be correctly attributed. After creating the account, you should find the course in the course listing at CSES (after the first lecture at the latest)."
+    "Create a user account on CSES (https://cses.fi/), and make sure you enter your CSES user name in the quiz on moodle to make sure that points can properly be attirbuted for programming tasks. After creating the account, you should find the course in the course listing at CSES (after the first lecture at the latest)."
    ]
   }
  ],
@@ -51,7 +51,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
