--- a/intro.tex
+++ b/intro.tex
@@ -40,7 +40,7 @@
 \author[Saska Dönges]{Saska Dönges}
 \title[PfP intro]{Programming for Performance}
 \subtitle{Intro lecture}
-\date{March 16. 2023, BSCS2011}%{\today}
+\date{March 16. 2024, BSCS2011}%{\today}
 \institute{Dept.\ of Computer science, University of Helsinki
 }
 
@@ -178,11 +178,21 @@ src=#3 % same path as in addresource!
 \alert{Interrupt} to comment or ask questions!
 \end{frame}
 
+\section{Goals}
+\begin{frame}{After todays lecture you should...}
+\begin{itemize}
+\itemsep=\fill
+\item know how the course is sructured,
+\item know what is required of you to pass the course
+\item and have a basic understanding of some of the higher level concepts explored on the course.
+\end{itemize}
+\end{frame}
+
 \section{Introductions and probing questions.}
 \begin{frame}{Who am I? Who are you?}
 \begin{itemize}
 	\itemsep=\fill
-	\item Where from?
+	\item Where from (BSc, CS, Math, Physics)?
 	\item What for?
 	\item Course history?
 	\item Relevant supporting knowledge?
@@ -238,12 +248,12 @@ activity types. Initital point limits are as follows:
 \item{{\bf 120+ points:}} grade 5
 \end{description}
 
-As this is the first course implementation with these activieties, the initial grading criteria 
-are not guaranteed to be very good. The given point limits may lower, but will not under any 
+This is the second course implementation with this set of activieties, the initial grading criteria 
+are still not guaranteed to be very good. The given point limits may lower, but will not under any 
 circumstances be higher than this.
 \end{frame}
 
-\begin{frame}{A series programming tasks}
+\begin{frame}{``A'' series programming tasks}
 \setlength\parskip{\fill}
 Intended to be doable for people not particularly familiar with C++ or systems programming.
 
@@ -259,13 +269,13 @@ If your implementations perform as required asymptotically, time and space limit
 I will be making spot checks to CSES submissions. No cheating!
 \end{frame}
 
-\begin{frame}{B series programming tasks} 
+\begin{frame}{``B'' series programming tasks} 
 \setlength\parskip{\fill}
 Meant to be challenging.
 
 I will make performance requirements as difficult as I can without making problems unfair.
 
-Some tasks (first and last at least), I can't make very hard without making them unfair.
+Some tasks may still be very hard. Don't get discouraged if you can'c complete some B series tasks.
 
 I don't expect many (any?) people to solve all of the B series tasks.
 
@@ -380,7 +390,7 @@ The vast majority of systems / low level code has been and is still written in C
 
 The vast majority of all research code is written in C++, Python, fortran, Matlab or JavaScript
 
-Since C++ is a superset of C, and C++ is more convenient, we use C++ over C.
+Since C++ is a superset(\alert{ish}) of C, and C++ is more convenient, we use C++ over C.
 
 Since we aren't physicists (at least I'm not), we skip fortran.
 \end{frame}
@@ -411,12 +421,14 @@ Since we aren't physicists (at least I'm not), we skip fortran.
 \begin{columns}
 \begin{column}{0.4\textwidth}
 \setlength\parskip{1em}
-\url{https://elomake.helsinki.fi/lomakkeet/122603/lomake.html}
+\url{https://elomake.helsinki.fi/lomakkeet/128673/lomake.html}
 
-It would really help me if you answer fully and allow data usage.
+It would really help me if you take the time to respond.
 \end{column}
 \begin{column}{0.6\textwidth}
-\includegraphics{elomakeqr}
+\begin{center}
+\includegraphics[width=0.5\columnwidth]{elomakeqr}
+\end{center}
 \end{column}
 \end{columns}
 \end{frame}
