--- a/wri0.ipynb
+++ b/wri0.ipynb
@@ -9,7 +9,9 @@
     "\n",
     "The written tasks are related (at least tangentially) to the task of the programming assignment.\n",
     "\n",
-    "Upload your answers as a single pdf to moodle. The length of your submission should definitely not exceed 2 pages in total.\n",
+    "Upload your answers as a single pdf to moodle. Please respond with full paragraphs and explain your answers. The length of your submission should definitely not exceed 2 pages in total.\n",
+    "\n",
+    "The tasks are worth 1 point each, incomplete answers may yield partial points.\n",
     "\n",
     "## Task 1\n",
     "\n",
@@ -53,7 +55,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
