--- a/VByte.ipynb
+++ b/VByte.ipynb
@@ -12,8 +12,8 @@
     "Bigger numbers $x \\geq 128$ are encoded using more than one byte. For example, for $x = 500$, which is `111110100` in binary, VByte would output the following bytes (shown in binary):\n",
     "\n",
     "<pre>\n",
-    "<b>0</b><u>1110100</u>\n",
-    "<b>1</b>00000<u>11</u>\n",
+    "<span style=\"color:red\"><b>0</b></span><u>1110100</u>\n",
+    "<span style=\"color:red\"><b>1</b></span>00000<u>11</u>\n",
     "</pre>\n",
     "\n"
    ]
@@ -25,9 +25,9 @@
    "source": [
     "Consider the two bytes above (in decimal they are $116$ and $131$, respectively). Looking at the underlined bits of each byte, we see precisely the bits that make up the original number $x = 500 = $`111110100`. The lower order $7$ bits of $x$ are underlined in the first byte, and the remaining bits are underlined in the second byte.\n",
     "\n",
-    "Now look at the leftmost bit of each byte (in **bold**), which is called the stop bit. In the first byte we have a $0$ and in the second byte a $1$. The $0$ in the first byte indicates that the encoded number $x = 500$ is greater than $127$ and that some more of its bits are contained in the next byte. So we read the next byte. It’s stop bit is $1$. This indicates that after this byte there are no more bits needed to reconstruct $x$.\n",
+    "Now look at the leftmost bit of each byte (in <span style=\"color:red\">**bold**</span>), which is called the stop bit. In the first byte we have a $0$ and in the second byte a $1$. The $0$ in the first byte indicates that the encoded number $x = 500$ is greater than $127$ and that some more of its bits are contained in the next byte. So we read the next byte. It’s stop bit is $1$. This indicates that after this byte there are no more bits needed to reconstruct $x$.\n",
     "\n",
-    "So we have found the bits for $x$, but how do we reconstruct $x$ itself? The following calculation does the job: $x = B0 + (B1 -128)*128$, where $B0$ is the first byte above, and $B1$ is the second. Spend some time verifying this for yourself.\n",
+    "So we have found the bits for $x$, but how do we reconstruct $x$ itself? The following calculation does the job: $x = B_0 + (B_1 -128)*128$, where $B0$ is the first byte above, and $B1$ is the second. Spend some time verifying this for yourself.\n",
     "\n",
     "The scheme works for any size number. For example, the number $20,000,000$ (20 million), which is `1001100010010110100000000` in binary, would have the following VByte encoding:\n",
     "\n",
@@ -78,7 +78,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
