--- a/intro.tex
+++ b/intro.tex
@@ -334,6 +334,16 @@ If you didn't realize that there was a pre-assignment you will now have until th
 \end{frame}
 
 \section{High level discussion about course contents / Intro to PfP.}
+\begin{frame}{Why PfP}
+\setlength\parskip{\fill}
+\pause
+Computers are getting slower \textsuperscript{[citation needed]} $\Rightarrow$
+
+We need to be more \alert{efficient}.
+
+Also, it's fun.
+\end{frame}
+
 \begin{frame}{What is systems programming?}
 \setlength\parskip{\fill}
 \pause
