--- a/prog1.ipynb
+++ b/prog1.ipynb
@@ -28,6 +28,9 @@
    "metadata": {},
    "source": [
     "## Task 1: \n",
+    "\n",
+    "### 2 out of 4 points\n",
+    "\n",
     "Use the template project from last week.\n",
     "\n",
     "If you ran the program with a good combination of data structure types and test data variations, you will have noticed that “-t 2”, the one that uses `std::unordered_set` is fastest in all cases. The task here is to beat it for cases where the insertions and queries are not interleaved.\n",
@@ -56,6 +59,9 @@
    "metadata": {},
    "source": [
     "## Task 2\n",
+    "\n",
+    "### 2 out of 4 points\n",
+    "\n",
     "Now, if we know how large the integers are allowed to be, and that a significant fraction of these integers will be present in the final set, we can, from the start store whether or not each of the allowed integers is in the set and just modify these values on insertion and look the values up on queries.\n",
     "\n",
     "Hint (spoiler): <span style=\"background-color:#000000\">Just an array of booleans, or the BitArray from next week.</span>\n",
@@ -98,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
