--- a/prog4.ipynb
+++ b/prog4.ipynb
@@ -88,7 +88,7 @@
     "\n",
     "and $k = 7$.\n",
     "\n",
-    "After VB encoding the integers in S we have the following bits (stop bits in bold):\n",
+    "After VB encoding the integers in S we have the following bits (stop bits in **bold**):\n",
     "\n",
     "<pre>\n",
     "<b>1</b>0000100 <b>0</b>1110100 <b>1</b>0000011 <b>0</b>1001000 <b>1</b>0000001 <b>1</b>0010010\n",
@@ -172,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
