--- a/wri1.ipynb
+++ b/wri1.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "What did you find and what can you say about it?\n",
     "\n",
-    "Note: I suppose \"no\" is a valid (and possibly correct) answer to this task, but that's not really all that fun is it?"
+    "**Note:** I suppose \"no\" is a valid (and possibly correct) answer to this task, but that's not really all that fun is it? Why not try to dazzle the grader with your c++ knowledge instead?"
    ]
   }
  ],
@@ -64,7 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
