--- a/intro.tex
+++ b/intro.tex
@@ -248,8 +248,8 @@ activity types. Initital point limits are as follows:
 \item{{\bf 120+ points:}} grade 5
 \end{description}
 
-This is the second course implementation with this set of activieties, the initial grading criteria 
-are still not guaranteed to be very good. The given point limits may lower, but will not under any 
+This is the third course implementation with this set of activieties, the initial grading criteria 
+will probably be what is applied at the end. That said, point limits may lower, but will not under any 
 circumstances be higher than this.
 \end{frame}
 
@@ -279,7 +279,7 @@ Some tasks may still be very hard. Don't get discouraged if you can'c complete s
 
 I don't expect many (any?) people to solve all of the B series tasks.
 
-You don't technically need to solve any to get grade 5 on the course.
+\alert{You don't technically need to solve any B tasks to get grade 5 on the course.}
 \end{frame}
 
 \begin{frame}{Written tasks}
@@ -289,9 +289,9 @@ Written tasks are meant to push students in the direction of performance oriente
 All written tasks are submitted to moodle.
 
 For students not present at the exercise session following the assignment deadline, the submission will be 
-manually graded by the TA (or me). (Feedback is not guaranteed)
+manually graded by Simon (or me). (Feedback is not guaranteed)
 
-For students present at the exercise session, self-reported points will be given by default, and TA will be making 
+For students present at the exercise session, self-reported points will be given by default. Simon and I will be making 
 spot checks to verify that the self reported points and moodle submissions agree.
 \end{frame}
 
@@ -431,7 +431,7 @@ Since we aren't physicists (at least I'm not), we skip fortran.
 \begin{columns}
 \begin{column}{0.4\textwidth}
 \setlength\parskip{1em}
-\url{https://elomake.helsinki.fi/lomakkeet/128673/lomake.html}
+\url{https://elomake.helsinki.fi/lomakkeet/134107/lomake.html}
 
 It would really help me if you take the time to respond.
 \end{column}
