--- a/prog2.ipynb
+++ b/prog2.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "## Data\n",
     "\n",
-    "For the assignment you with files containing unsigned 64-bit integers (note: not in text format).\n",
+    "For the assignment you will work with files containing unsigned 64-bit integers **(note: not in text format)**.\n",
     "\n",
     "Unfortunately there is no convenient way provided by UH to share ready made files, so you will have to use the `nums.py` program  (shared on moodle) to generate files.\n",
     "\n",
@@ -19,7 +19,7 @@
     "* Files created with the `-b` flag are for tasks 3, and contain $n$ and $m$, followed by $n$ integers to add to a `BitArray`, followed by $n$ integers for location queries.\n",
     "* Files created with the `-c` flag are for task 4, and contain $n$ and $k$, followed by $n$ integers to add to a packed array, followed by $n$ integers for index queries.\n",
     "\n",
-    "In addition, you can provide the `-s` flag to sort the data. (Does not sort the integers to append in `-c` is given, just the queries.)\n",
+    "In addition, you can provide the `-s` flag to sort the data. (Does not sort the integers to append if `-c` is given, just the queries.)\n",
     "\n",
     "These files are similar to the inputs that CSES will use to test your solutions.\n",
     "\n",
