--- a/wri0.ipynb
+++ b/wri0.ipynb
@@ -11,13 +11,15 @@
     "\n",
     "Upload your answers as a single pdf to moodle. Please respond with full paragraphs and explain your answers. The length of your submission should definitely not exceed 2 pages in total.\n",
     "\n",
+    "The point is to show the grader that you did actually spend some time thinking about and working on the tasks.\n",
+    "\n",
     "The tasks are worth 1 point each, incomplete answers may yield partial points.\n",
     "\n",
     "## Task 1\n",
     "\n",
     "What did you do and why for the programming task A00?\n",
     "\n",
-    "What did you find / What results did you get when running the code?\n",
+    "What did you find / What results did you get when running the code? Why?\n",
     "\n",
     "The answer should be brief and to the point, a total of ~1 page at most.\n",
     "\n",
@@ -55,7 +57,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
