--- a/prog1.ipynb
+++ b/prog1.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "Your data structure should not require more space than `std::unordered_set`.\n",
     "\n",
-    "Hint (spoiler): <span style=\"background-color:#000000\">std::binary_search is fast and vectors are very efficient.</span>\n",
+    "Hint (spoiler): <span style=\"background-color:#000000\">std::binary_search and std::sort are fast and dynamic arrays are very efficient. malloc, realloc and free are your friends.</span>\n",
     "\n",
     "Implement this data structure in the project (make it “-t 4”), and make this the default for when the “-s” switch is given when starting the program and “-t” is not specified (this should already be the case if you set this as “-t 4” in the program).\n",
     "\n",
